# lazy_auth

./: Cargo.toml
src/: lib.rs
src/examples/: pair.rs  validate.rs
