[package]
name = "lazy_auth"
version = "0.1.0"
edition = "2021"
[[bin]]
path = "./src/examples/pair.rs"
name = "pair"
[[bin]]
path = "./src/examples/validate.rs"
name = "validate"
[[bin]]
path = "./src/bin/generate_secret.rs"
name = "generate_secret"
[dependencies]
base64 = { version = "0.13.0" }
orion = { version = "0.17.2" }
reqwest = { version = "0.11.11", features = [ "blocking" ] }
